[gd_scene load_steps=20 format=3 uid="uid://dsr6iiolheh1f"]

[ext_resource type="Script" path="res://scenes/in-game-ui/bottom_ui.gd" id="1_w3s35"]
[ext_resource type="Texture2D" uid="uid://cihittrmd7t2i" path="res://textures/projectile/pixel-pie-400.png" id="2_1min0"]
[ext_resource type="Script" path="res://scenes/in-game-ui/Inventory.gd" id="3_d8tjt"]
[ext_resource type="StyleBox" uid="uid://u0klvjtwyoju" path="res://fonts/grey_style_box_bg.tres" id="4_i7vl6"]
[ext_resource type="LabelSettings" uid="uid://du3fepabgj3y2" path="res://fonts/modifier_label_settings.tres" id="4_r7aal"]
[ext_resource type="LabelSettings" uid="uid://ckf3lk76e86ni" path="res://fonts/frequency_label_settings.tres" id="5_j3mav"]
[ext_resource type="LabelSettings" uid="uid://db0svtjv6o8j2" path="res://fonts/amplitude_label_settings.tres" id="6_aka0c"]
[ext_resource type="Texture2D" uid="uid://btf40c3p0dmmu" path="res://textures/power-ups/power_sin.png" id="7_ijb4x"]
[ext_resource type="Texture2D" uid="uid://c601v4let1yjk" path="res://textures/power-ups/power_freq.png" id="8_jxyj6"]
[ext_resource type="Texture2D" uid="uid://cdtghodn42cj1" path="res://textures/power-ups/power_amp.png" id="9_pp2gc"]

[sub_resource type="LabelSettings" id="LabelSettings_3s64t"]
font_size = 35
font_color = Color(0.419608, 0.180392, 0.180392, 1)

[sub_resource type="GDScript" id="GDScript_vexre"]
script/source = "extends TextureRect


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvjlu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hsmwt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xd5i"]
bg_color = Color(0.929412, 0.203922, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ispom"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jejwj"]
bg_color = Color(0.286275, 0.67451, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sg364"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kogbh"]
bg_color = Color(0.317647, 0.490196, 0.937255, 1)

[node name="BottomUi" type="MarginContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -169.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_w3s35")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PieSection" type="GridContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4

[node name="PieNumber" type="Label" parent="HBoxContainer/PieSection"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
text = "ฯ/2: 90ยบ"
label_settings = SubResource("LabelSettings_3s64t")
justification_flags = 35

[node name="PieDisplay" type="BoxContainer" parent="HBoxContainer/PieSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PieSection/PieDisplay"]
layout_mode = 2
texture = ExtResource("2_1min0")
expand_mode = 2
stretch_mode = 4

[node name="Divider" type="Panel" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="Inventory" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
columns = 3
script = ExtResource("3_d8tjt")

[node name="ModifierLabel" type="Label" parent="HBoxContainer/Inventory"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_i7vl6")
text = "Sine
"
label_settings = ExtResource("4_r7aal")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrequencyLabel" type="Label" parent="HBoxContainer/Inventory"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_i7vl6")
text = "Freq: 1
"
label_settings = ExtResource("5_j3mav")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmplitudeLabel" type="Label" parent="HBoxContainer/Inventory"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_i7vl6")
text = "Amp: 1
"
label_settings = ExtResource("6_aka0c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Modifier" type="TextureRect" parent="HBoxContainer/Inventory"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Sine or Cosine Wave Modifier
"
texture = ExtResource("7_ijb4x")
expand_mode = 2
stretch_mode = 4

[node name="Frequency" type="TextureRect" parent="HBoxContainer/Inventory"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Frequency Power-Up"
texture = ExtResource("8_jxyj6")
expand_mode = 2
stretch_mode = 4

[node name="Amplitude" type="TextureRect" parent="HBoxContainer/Inventory"]
layout_mode = 2
tooltip_text = "Amplitude Power-Up"
texture = ExtResource("9_pp2gc")
expand_mode = 2
stretch_mode = 4
script = SubResource("GDScript_vexre")

[node name="Cooldowns" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CooldownLabel" type="Label" parent="HBoxContainer/Cooldowns"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nvjlu")
text = "Cool Downs"
horizontal_alignment = 1

[node name="Buttons" type="GridContainer" parent="HBoxContainer/Cooldowns"]
layout_mode = 2
columns = 3

[node name="TabButton" type="Button" parent="HBoxContainer/Cooldowns/Buttons"]
material = SubResource("ShaderMaterial_hsmwt")
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_6xd5i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ispom")
toggle_mode = true
action_mode = 0
button_mask = 0
text = "Tab"
expand_icon = true

[node name="FBtutton" type="Button" parent="HBoxContainer/Cooldowns/Buttons"]
material = SubResource("ShaderMaterial_hsmwt")
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_jejwj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sg364")
toggle_mode = true
action_mode = 0
button_mask = 0
text = "  F  "
expand_icon = true

[node name="ClickButton" type="Button" parent="HBoxContainer/Cooldowns/Buttons"]
material = SubResource("ShaderMaterial_hsmwt")
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_kogbh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sg364")
toggle_mode = true
action_mode = 0
button_mask = 0
text = "Click"
